Upload now saves the file locally. Finding ways to display data is under works.
Added login.html. Currently unaccessible.

--- a/homepage/templates/homepage/login.html
+++ b/homepage/templates/homepage/login.html
@@ -1,12 +1,11 @@
 {% extends "homepage/base.html" %}
 
 {% block content %}
-	<h2>Upload test</h2>
-
 	<form method = "post" enctype ="multipart/form-data">
 		{% csrf_token %}
-		<input type="file" name="csv_file">
-		<button type="submit">Upload File</button>
+		<input type="text" name="username">
+		<input type="password" name="password">
+		<input type="email" name="email">
+		<button type="submit">Login</button>
 	</form>
-
 {% endblock content %}
